# System-Activity-Monitor

./: CMakeLists.txt  Makefile  README.md  a.out  color.h  cpu.c  cpu.h  cpu_utils.c  disk.c  main.c  memory.c  memory.h  system_monitor  utils.c
helpers/: ft_atoi.c  ft_isnumeric.c  ft_split.c  ft_strjoin.c
include/: color.h  helpers.h  system_monitor.h
lib/: ft_split.c  ft_strjoin.c
